Fixed having our last names in the Agendas and Meeting pages. I also uploaded and added each of the flier pictures to the portfolio page. This will show all the places that we posted fliers

--- a/meeting-1-agenda.html
+++ b/meeting-1-agenda.html
@@ -66,16 +66,16 @@
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
 		<p>
-		<b>Members Present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Kevin Meier, Blake Behme, John Owen<br><br>
+		<b>Members Present:</b> Nathaniel, Josh, Nick D., Nick F., Kevin, Blake, John<br><br>
 
 <b>Members Absent:</b> Nobody<br><br>
 
 <b>Roles</b><br>
-Historian: Nick Daniels and Josh Matchuny<br>
-Recorder: Nathaniel Stukenberg<br>
-Liaison: John Owen<br>
-Treasurers: Kevin Meier and Blake Behme<br>
-Webmaster: Nick Frichette<br><br>
+Historian: Nick D. and Josh<br>
+Recorder: Nathaniel<br>
+Liaison: John<br>
+Treasurers: Kevin and Blake<br>
+Webmaster: Nick F.<br><br>
 
 <b>Rules</b><br>
 1. Be on time<br>
