--- a/meeting-2-agenda.html
+++ b/meeting-2-agenda.html
@@ -68,7 +68,7 @@
 		<p>
 		<b>Call to order:</b> 5:00pm<br><br>
 
-<b>Members present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Kevin Meier, Blake Behme, and John Owen<br><br>
+<b>Members present:</b> Nathaniel, Josh, Nick D., Nick F., Kevin, Blake, and John<br><br>
 
 <b>Members absent:</b> None<br><br>
 
@@ -89,13 +89,13 @@
 
 <b>Next meeting:</b> 02/16/17 at [<b>REDACTED</b>]<br>
 
-    Nathaniel Stukenberg: Bring note taking material<br>
-    Josh Matchuny: Bring note taking material<br>
-    Nick Daniels: Bring logo idea to meeting<br>
-    Nick Frichette: Website<br>
-    Kevin Meier: T-shirt pricing<br>
-    Blake Behme: T-shirt pricing<br>
-    John Owen: Bring notes on how to setup a run<br>
+    Nathaniel: Bring note taking material<br>
+    Josh: Bring note taking material<br>
+    Nick D.: Bring logo idea to meeting<br>
+    Nick F.: Website<br>
+    Kevin: T-shirt pricing<br>
+    Blake: T-shirt pricing<br>
+    John: Bring notes on how to setup a run<br>
     Everyone: Bring a bio for the website about themselves<br><br>
 
 <b>Adjournment:</b> 6:05 pm<br>
