--- a/meeting-3-agenda.html
+++ b/meeting-3-agenda.html
@@ -74,13 +74,13 @@
 
 <b>Next meeting:</b> 02/16/17 at [<b>REDACTED</b>]<br>
 
-    Nathaniel Stukenberg: Bring note taking material<br>
-    Josh Matchuny: Bring noe taking material<br>
-    Nick Daniels: Bring logo idea to meeting<br>
-    Nick Frichette: Website<br>
-    Kevin Meier: T-shirt pricing<br>
-    Blake Behme: T-shirt pricing<br>
-    John Owen: Bring notes on how to setup a run<br>
+    Nathaniel: Bring note taking material<br>
+    Josh: Bring noe taking material<br>
+    Nick D.: Bring logo idea to meeting<br>
+    Nick F.: Website<br>
+    Kevin: T-shirt pricing<br>
+    Blake: T-shirt pricing<br>
+    John: Bring notes on how to setup a run<br>
     Everyone: Bring a bio for the website about themselves<br>
 
 
