--- a/meeting-3-minutes.html
+++ b/meeting-3-minutes.html
@@ -69,32 +69,32 @@
 		<div style="text-align:center"><img src="img/meeting-3.jpg" height="65%" width="65%"/></div><br>
 		<b>Call to order:</b> 5:00pm<br><br>
 
-<b>Members present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Blake Behme, and John Owen<br><br>
+<b>Members present:</b> Nathaniel, Josh, Nick D., Nick F., Blake, and John<br><br>
 
-<b>Members absent:</b> Kevin Meier (schedule conflict)<br><br>
+<b>Members absent:</b> Kevin (schedule conflict)<br><br>
 
 <b>Review and approve minutes of previous meeting:</b> Minutes reviewed and approved<br><br>
 
 <b>Member reports:</b>
-    Historian (Nick Daniels): Nick made a logo for our group and has it done.<br>
-    Liaison (John Owen): John contacted a possible sponsor with Feet Fleet about getting donations and how to run a successful event.<br>
-    Treasurer 1 (Blake Behme): Blake found the more shirts we buy the cheaper it will be per shirt. Right now, it might only be $5 per shirt if we buy in a big enough bulk.<br>
-    Treasurer 2 (Kevin Meier): Kevin was not present at the meeting.<br>
-    Webmaster (Nick Frichette): Nick has the website up and running.<br>
-    Recorder (Nathaniel Stukenberg): Nathaniel uploaded the pervious agenda and minutes.<br>
-    Recorder 2 (Josh Matchuny): Josh has nothing new to report.<br><br>
+    Historian (Nick D.): Nick made a logo for our group and has it done.<br>
+    Liaison (John): John contacted a possible sponsor with Feet Fleet about getting donations and how to run a successful event.<br>
+    Treasurer 1 (Blake): Blake found the more shirts we buy the cheaper it will be per shirt. Right now, it might only be $5 per shirt if we buy in a big enough bulk.<br>
+    Treasurer 2 (Kevin): Kevin was not present at the meeting.<br>
+    Webmaster (Nick F.): Nick has the website up and running.<br>
+    Recorder (Nathaniel): Nathaniel uploaded the pervious agenda and minutes.<br>
+    Recorder 2 (Josh): Josh has nothing new to report.<br><br>
 
 <b>Old business:</b> We designed logo, decided on which organization we wanted to help, and what event we might be considering on doing.<br><br>
 
 <b>New business:</b> We finished the logo and bios for the website. Complete the project proposal as a group at the meeting.<br><br>
 <b>Next meeting:</b> 02/23/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes and bring note taking material.<br>
-    Josh Matchuny: Bring note taking material.<br>
-    Nick Daniels: Bring note taking material.<br>
-    Nick Frichette: Will start to upload our bios to the website.<br>
-    Kevin Meier: Bring note taking material.<br>
-    Blake Behme: Bring note taking<br>
-    John Owen: Contact 3 organizations about donations and what we could do for the run.<br><br>
+    Nathaniel: Upload Agenda and Minutes and bring note taking material.<br>
+    Josh: Bring note taking material.<br>
+    Nick D.: Bring note taking material.<br>
+    Nick F.: Will start to upload our bios to the website.<br>
+    Kevin: Bring note taking material.<br>
+    Blake: Bring note taking<br>
+    John: Contact 3 organizations about donations and what we could do for the run.<br><br>
     <b>Everyone:</b> Think of more ideas for our project if it does not work out for the run.<br><br>
 
 <b>Adjournment:</b> 6:25 pm<br>
