--- a/meeting-4-agenda.html
+++ b/meeting-4-agenda.html
@@ -72,13 +72,13 @@
 <b>New business:</b> Have we heard from our organization yet? What should our alternative project be if the original was not approved?<br><br>
 
 <b>Next meeting:</b> 02/16/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes and bring note taking material to the meeting.<br>
-    Josh Matchuny: Bring note taking material to the meeting.<br>
-    Nick Daniels: Bring note taking material to the meeting.<br>
-    Nick Frichette: Will start to upload our bios to the website.<br>
-    Kevin Meier: Bring note taking material to the meeting.<br>
-    Blake Behme: Bring note taking material to the meeting.<br>
-    John Owen: Contact 3 organizations about donations and what we could do for the run.<br><br>
+    Nathaniel: Upload Agenda and Minutes and bring note taking material to the meeting.<br>
+    Josh: Bring note taking material to the meeting.<br>
+    Nick D.: Bring note taking material to the meeting.<br>
+    Nick F.: Will start to upload our bios to the website.<br>
+    Kevin: Bring note taking material to the meeting.<br>
+    Blake: Bring note taking material to the meeting.<br>
+    John: Contact 3 organizations about donations and what we could do for the run.<br><br>
     <b>Everyone:</b> Think of more ideas for our project if our original does not work out for the run.<br>
 		</p>
 	    </div>			
