--- a/meeting-4-minutes.html
+++ b/meeting-4-minutes.html
@@ -69,33 +69,33 @@
 		<div style="text-align:center"><img src="img/meeting-4.jpg" height="65%" width="65%"/></div><br>
 		<b>Call to order:</b> 5:00pm<br><br>
 
-<b>Members present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Kevin Meier, and John Owen<br><br>
+<b>Members present:</b> Nathaniel, Josh, Nick D., Nick F., Kevin, and John<br><br>
 
-<b>Members absent:</b> Blake Behme (schedule conflict)<br><br>
+<b>Members absent:</b> Blake (schedule conflict)<br><br>
 
 <b>Review and approve minutes of previous meeting:</b> Minutes were reviewed and approved.<br><br>
 
 <b>Member reports:</b><br>
-    Historian (Nick Daniels): Nick has nothing new to report for historian role.<br>
-    Liaison (John Owen): John contacted Home Sweet Home for possible ideas with help they might want with their run. They seemed to want help with the run, but we are waiting for Julie to respond with her ideas.<br>
-    Treasurer 1 (Blake Behme): Blake was not present at the meeting.<br>
-    Treasurer 2 (Kevin Meier): Kevin has nothing new to report for the treasurer role.<br>
-    Webmaster (Nick Frichette): Nick has nothing new to report for the webmaster role.<br>
-    Recorder (Nathaniel Stukenberg): Nathaniel uploaded the pervious agenda and minutes.<br>
-    Recorder 2 (Josh Matchuny): Josh has nothing new to report as the second recorder.<br><br>
+    Historian (Nick D.): Nick has nothing new to report for historian role.<br>
+    Liaison (John): John contacted Home Sweet Home for possible ideas with help they might want with their run. They seemed to want help with the run, but we are waiting for Julie to respond with her ideas.<br>
+    Treasurer 1 (Blake): Blake was not present at the meeting.<br>
+    Treasurer 2 (Kevin): Kevin has nothing new to report for the treasurer role.<br>
+    Webmaster (Nick F.): Nick has nothing new to report for the webmaster role.<br>
+    Recorder (Nathaniel): Nathaniel uploaded the pervious agenda and minutes.<br>
+    Recorder 2 (Josh): Josh has nothing new to report as the second recorder.<br><br>
 
 <b>Old business:</b> We finished the logo and bios for the website. Complete the project proposal as a group at the meeting.<br><br>
 
 <b>New business:</b> What is a new idea for us to help Home Sweet Home besides just helping with their run. We talked about how we could get people to sign up for the run and document that it was us that told them about the run. We also looked at pervious years’ numbers for the Home Sweet Home run and was going to see if there was an increase in numbers compared to previous years. We also saw there was hardly anybody registered between the ages of 18 to 25 and thought we could help to get college students to do it.<br><br>
 
 <b>Next meeting:</b> 03/02/17 at [<b>REDACTED</b>]<br><br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes and bring note taking material. Also, figure out what it takes to reserve a spot to pass out flyer at Watterson Dining.<br>
-    Josh Matchuny: Talk to the basketball association about our run and see if they would like to get anyone to join it.<br>
-    Nick Daniels: Start to think and design a flyer we could pass out to help get more participates to join the run for both the 5k and 10k.<br>
-    Nick Frichette: Add the logo to the website before the next meeting.<br>
-    Kevin Meier: Brainstorm ideas for getting people for our run and flyer ideas.<br>
-    Blake Behme: Brainstorm ideas for getting people for our run and flyer ideas.<br>
-    John Owen: Telling both FeetFleet and Home Sweet Home about our idea to pass out flyers to help people learn more about their run. Get in contact with Julie about adding a team field on the sign-up page. Also, contact schools about our run and see if they might help us promote the run.<br><br>
+    Nathaniel: Upload Agenda and Minutes and bring note taking material. Also, figure out what it takes to reserve a spot to pass out flyer at Watterson Dining.<br>
+    Josh: Talk to the basketball association about our run and see if they would like to get anyone to join it.<br>
+    Nick D.: Start to think and design a flyer we could pass out to help get more participates to join the run for both the 5k and 10k.<br>
+    Nick F.: Add the logo to the website before the next meeting.<br>
+    Kevin: Brainstorm ideas for getting people for our run and flyer ideas.<br>
+    Blake: Brainstorm ideas for getting people for our run and flyer ideas.<br>
+    John: Telling both FeetFleet and Home Sweet Home about our idea to pass out flyers to help people learn more about their run. Get in contact with Julie about adding a team field on the sign-up page. Also, contact schools about our run and see if they might help us promote the run.<br><br>
     <b>Everyone:</b> Brainstorm ideas for getting people for our run and flyer ideas. Also, think of alternative ideas if the run falls through.<br><br>
 
 <b>Adjournment:</b> 6:10 pm
