--- a/meeting-5-agenda.html
+++ b/meeting-5-agenda.html
@@ -72,13 +72,13 @@
 <b>New business:</b> Have we heard from our organization yet? What should we use for a flyer design? Where should we go to pass out flyers and promote our run? Did we hear back from Home Sweet Home about volunteering to help out with the run and pass out flyers?<br><br>
 
 <b>Next meeting:</b> 03/02/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Bring note taking material. Also, figure out what it takes to reserve a spot to pass out flyer at Watterson Dining.<br>
-    Josh Matchuny: Talk to the basketball association about our run and see if they would like to get anyone to join it.<br>
-    Nick Daniels: Start to think and design a flyer we could pass out to help get more participates to join the run for both the 5k and 10k.<br>
-    Nick Frichette: Add the logo to the website before the next meeting.<br>
-    Kevin Meier: Brainstorm ideas for getting people for our run and flyer ideas.<br>
-    Blake Behme: Brainstorm ideas for getting people for our run and flyer ideas.<br>
-    John Owen: Tell both FeetFleet and Home Sweet Home about our idea to pass out flyers to help people learn more about their run. Get in contact with Julie about adding a team field on the sign-up page. Also, contact schools about our run and see if they might help us promote the run.<br><br>
+    Nathaniel: Bring note taking material. Also, figure out what it takes to reserve a spot to pass out flyer at Watterson Dining.<br>
+    Josh: Talk to the basketball association about our run and see if they would like to get anyone to join it.<br>
+    Nick D.: Start to think and design a flyer we could pass out to help get more participates to join the run for both the 5k and 10k.<br>
+    Nick F.: Add the logo to the website before the next meeting.<br>
+    Kevin: Brainstorm ideas for getting people for our run and flyer ideas.<br>
+    Blake: Brainstorm ideas for getting people for our run and flyer ideas.<br>
+    John: Tell both FeetFleet and Home Sweet Home about our idea to pass out flyers to help people learn more about their run. Get in contact with Julie about adding a team field on the sign-up page. Also, contact schools about our run and see if they might help us promote the run.<br><br>
     <b>Everyone:</b> Brainstorm ideas for getting people for our run and flyer ideas. Also, think of alternative ideas if the run falls through.
 
 		</p>
