--- a/meeting-5-minutes.html
+++ b/meeting-5-minutes.html
@@ -69,33 +69,33 @@
 		<div style="text-align:center"><img src="img/March 2 Meeting.jpg" height="65%" width="65%"/></div><br>
 		<b>Call to order:</b> 5:00pm<br><br>
 
-<b>Members present:</b> Nathaniel Stukenberg, Josh Matchuny, Blake Behme, Nick Daniels, Nick Frichette, Kevin Meier, and John Owen<br><br>
+<b>Members present:</b> Nathaniel, Josh, Blake, Nick D., Nick F., Kevin, and John<br><br>
 
 <b>Members absent:</b> None<br><br>
 
 <b>Review and approve minutes of previous meeting:</b> Minutes were reviewed and approved.<br><br>
 
 <b>Member reports:</b>
-    Historian (Nick Daniels): Nick does not have anything new to report as the historian.<br>
-    Liaison (John Owen): John got in contact with FeetFleet about us helping with the race.<br>
-    Treasurer 1 (Blake Behme): Blake does not have anything new to report as the treasurer.<br>
-    Treasurer 2 (Kevin Meier): Kevin does not have anything new to report as the treasurer.<br>
-    Webmaster (Nick Frichette): The logo is up on the website.<br>
-    Recorder (Nathaniel Stukenberg): Nathaniel found out we might need to fill out a form 10 days in advance to hand out flyers around campus<br>
-    Recorder 2 (Josh Matchuny): Josh does not have anything new to report as the second recorder.<br><br>
+    Historian (Nick D.): Nick does not have anything new to report as the historian.<br>
+    Liaison (John): John got in contact with FeetFleet about us helping with the race.<br>
+    Treasurer 1 (Blake): Blake does not have anything new to report as the treasurer.<br>
+    Treasurer 2 (Kevin): Kevin does not have anything new to report as the treasurer.<br>
+    Webmaster (Nick F.): The logo is up on the website.<br>
+    Recorder (Nathaniel): Nathaniel found out we might need to fill out a form 10 days in advance to hand out flyers around campus<br>
+    Recorder 2 (Josh): Josh does not have anything new to report as the second recorder.<br><br>
 
 <b>Old business:</b> What is a new idea for us to help Home Sweet Home besides just helping with their run. We talked about how we could get people to sign up for the run and document that it was us that told them about the run. We also looked at previous years’ numbers for the Home Sweet Home run and was going to see if there was an increase in numbers compared to previous years. We also saw there was hardly anybody registered between the ages of 18 to 25 and thought we could help to get college students to do it.<br><br>
 
 <b>New business:</b> We have heard back from Julie from Feet Fleet about the race and we have a meeting with her Friday March 3rd to discuss us promoting the race. We need to contact radio stations about advertising our race to the community. We also need to contact about advertising on campus.<br><br>
 
 <b>Next meeting:</b> 03/09/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes and bring note taking material.<br>
-    Josh Matchuny: Get ready to start promoting the run.<br>
-    Nick Daniels: Start designing a flyer for the race if Feet Fleet does not have one already.<br>
-    Nick Frichette: Start working on the timeline to be added to the website for documentation and upload new picture to our website.<br>
-    Kevin Meier: Get ready to start promoting the run.<br>
-    Blake Behme: Get ready to start promoting the run.<br>
-    John Owen: Meet with Julie and let the group know the responses to our questions. Also contact radio stations about the run.<br><br>
+    Nathaniel: Upload Agenda and Minutes and bring note taking material.<br>
+    Josh: Get ready to start promoting the run.<br>
+    Nick D.: Start designing a flyer for the race if Feet Fleet does not have one already.<br>
+    Nick F.: Start working on the timeline to be added to the website for documentation and upload new picture to our website.<br>
+    Kevin: Get ready to start promoting the run.<br>
+    Blake: Get ready to start promoting the run.<br>
+    John: Meet with Julie and let the group know the responses to our questions. Also contact radio stations about the run.<br><br>
     <b>Everyone:</b> Be prepared to do our midterm assessment at our next meeting.<br><br>
 
 <b>Adjournment:</b> 6:00 pm
