--- a/meeting-6-agenda.html
+++ b/meeting-6-agenda.html
@@ -72,13 +72,13 @@
 <b>New business:</b> How did the meeting with Julie go? Did we finish a flyer to start passing out? Do we need to sign up for the race to volunteer? How else can we promote the race? How can we get more volunteer hours?<br><br>
 
 <b>Next meeting:</b> 03/02/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes and bring note taking material.<br>
-    Josh Matchuny: Get ready to start promoting the run.<br>
-    Nick Daniels: Start designing a flyer for the race if Feet Fleet does not have one already.<br>
-    Nick Frichette: Start working on the timeline to be added to the website for documentation and upload new picture to our website.<br>
-    Kevin Meier: Get ready to start promoting the run.<br>
-    Blake Behme: Get ready to start promoting the run.<br>
-    John Owen: Meet with Julie and let the group know the responses to our questions. Also, contact radio stations about the run.<br><br>
+    Nathaniel: Upload Agenda and Minutes and bring note taking material.<br>
+    Josh: Get ready to start promoting the run.<br>
+    Nick D.: Start designing a flyer for the race if Feet Fleet does not have one already.<br>
+    Nick F.: Start working on the timeline to be added to the website for documentation and upload new picture to our website.<br>
+    Kevin: Get ready to start promoting the run.<br>
+    Blake: Get ready to start promoting the run.<br>
+    John: Meet with Julie and let the group know the responses to our questions. Also, contact radio stations about the run.<br><br>
     <b>Everyone:</b> Be prepared to do our midterm assessment at our next meeting.
 
 
