--- a/meeting-6-minutes.html
+++ b/meeting-6-minutes.html
@@ -69,33 +69,33 @@
 		<div style="text-align:center"><img src="img/meeting-6.jpg" height="50%" width="50%"/></div><br>
 		<b>Call to order:</b> 5:00pm<br><br>
 
-<b>Members present:</b> Nathaniel Stukenberg, Blake Behme, Nick Daniels, Nick Frichette, Kevin Meier, and John Owen<br><br>
+<b>Members present:</b> Nathaniel, Blake, Nick D., Nick F., Kevin, and John<br><br>
 
-<b>Members absent:</b> Josh Matchuny (Had to catch a flight)<br><br>
+<b>Members absent:</b> Josh (Had to catch a flight)<br><br>
 
 <b>Review and approve minutes of previous meeting:</b> Minutes were reviewed and approved.<br><br>
 
 <b>Member reports:</b><br>
-    Historian (Nick Daniels): Nick has a template for the flier we are going to pass out.<br>
-    Liaison (John Owen): We got the parking for where the runners meet for parking.<br>
-    Treasurer 1 (Blake Behme): Blake does not have anything new to report.<br>
-    Treasurer 2 (Kevin Meier): Kevin does not have anything new to report.<br>
-    Webmaster (Nick Frichette): Nick contacted the radio stations about promoting the race and updated the website.<br>
-    Recorder (Nathaniel Stukenberg): Nathan does not have anything new to report.<br>
-    Recorder 2 (Josh Matchuny): Josh was not at the meeting.<br><br>
+    Historian (Nick D.): Nick has a template for the flier we are going to pass out.<br>
+    Liaison (John): We got the parking for where the runners meet for parking.<br>
+    Treasurer 1 (Blake): Blake does not have anything new to report.<br>
+    Treasurer 2 (Kevin): Kevin does not have anything new to report.<br>
+    Webmaster (Nick F.): Nick contacted the radio stations about promoting the race and updated the website.<br>
+    Recorder (Nathaniel): Nathan does not have anything new to report.<br>
+    Recorder 2 (Josh): Josh was not at the meeting.<br><br>
 
 <b>Old business:</b> We have heard back from Julie from Feet Fleet about the race and we have a meeting with her Friday March 3rd to discuss us promoting the race. We need to contact radio stations about advertising our race to the community. We also need to contact about advertising on campus.<br><br>
 
 <b>New business:</b> We filled out our midterm assessment. We got a template for our flier design. We signed up to volunteer for the run. We also changed our smart goals due to them not working with our new plan of action.<br><br>
 
 <b>Next meeting:</b> 03/23/17 at [<b>REDACTED</b>]<br>
-    Nathaniel Stukenberg: Upload Agenda and Minutes for the next meeting.<br>
-    Josh Matchuny: Sign up to volunteer for the run. We added the link in our group chat.<br>
-    Nick Daniels: Finalize the flier for next week so we can print it.<br>
-    Nick Frichette: Update the website with our new smart goals and portfolio.<br>
-    Kevin Meier: Email the Wesleyan radio station to see if they will promote our race.<br>
-    Blake Behme: Consider places we can promote here on campus or in the local area.<br>
-    John Owen: Contact with the parking sites. Also, contact HSH so we can meet with them for the first time.<br><br>
+    Nathaniel: Upload Agenda and Minutes for the next meeting.<br>
+    Josh: Sign up to volunteer for the run. We added the link in our group chat.<br>
+    Nick D.: Finalize the flier for next week so we can print it.<br>
+    Nick F.: Update the website with our new smart goals and portfolio.<br>
+    Kevin: Email the Wesleyan radio station to see if they will promote our race.<br>
+    Blake: Consider places we can promote here on campus or in the local area.<br>
+    John: Contact with the parking sites. Also, contact HSH so we can meet with them for the first time.<br><br>
     <b>Everyone:</b> Get ready to promote the race the week after spring break<br><br>
 
 <b>Adjournment:</b> 6:00 pm
