Uploaded some of the flier and promotional advertising information. Also fixed the midterm progress report that contained last names

--- a/midterm-assessment-report.html
+++ b/midterm-assessment-report.html
@@ -101,19 +101,19 @@ We are promoting the event on stations that are relevant to the age range of 13-
 		4 - "most likely"<br><br>
 
 		<b>11. Please list your team members (first and last names), their formal roles and summarize their contributions to date (both in terms of fulfilling their roles AND in terms of contributions to primary and secondary goals).</b><br>
-		Nick Frichette (Webmaster): Built the website. Worked on the portfolio. Contacted WZND and WGLT and secured promotional value. Attended the meeting with Fleet Feet. Communicated with HSHM.<br><br>
+		Nick F. (Webmaster): Built the website. Worked on the portfolio. Contacted WZND and WGLT and secured promotional value. Attended the meeting with Fleet Feet. Communicated with HSHM.<br><br>
 
-Nathaniel Stukenberg (Recorder): Has uploaded all the agendas and minutes. Took pictures of meeting. Preparing for event.<br><br>
+Nathaniel (Recorder): Has uploaded all the agendas and minutes. Took pictures of meeting. Preparing for event.<br><br>
 
-John Owen (Liasion): Communicated with HSHM. Attended the meeting with Fleet Feet. Communicated with the event organizing to assist with parking. Served as Liaison and communicated with multiple relevant parties.<br><br>
+John (Liasion): Communicated with HSHM. Attended the meeting with Fleet Feet. Communicated with the event organizing to assist with parking. Served as Liaison and communicated with multiple relevant parties.<br><br>
 
-Josh Matchuny (Back-up Recorder): Contacted Official Association to promote the event with local basketball groups. Preparing for event.<br><br>
+Josh (Back-up Recorder): Contacted Official Association to promote the event with local basketball groups. Preparing for event.<br><br>
 
-D. Nick Daniels (Historian): Developed the flier. Developed the team logo. Preparing for the event.<br><br>
+D. Nick (Historian): Developed the flier. Developed the team logo. Preparing for the event.<br><br>
 
-Kevin Meier (Treasurer): Researched avenues of promotional value. Preparing for the event.<br><br>
+Kevin (Treasurer): Researched avenues of promotional value. Preparing for the event.<br><br>
 
-Blake Behme (Treasurer): Researched avenues of promotional value. Preparing for the event.<br><br>
+Blake (Treasurer): Researched avenues of promotional value. Preparing for the event.<br><br>
 
 		<b>12. On a scale of 1-5 (1 meaning “not at all” and 5 meaning “definitely”) do you feel your team meetings are productive:</b><br>
 		5 - "definitely"<br><br>
