--- a/portfolio.html
+++ b/portfolio.html
@@ -112,12 +112,27 @@
 		We are awaiting the day of the race to log volunteer hours.
 
 		<h3>Advertising</h3>
+		<h4>Radio Promotions</h4>
+		<div style="text-align:center">
+			<img src="img/wzndLogo.png" height="30%" width="30%"/>
+			<img src="img/wgltLogo.jpg" height="30%" width="30%"/>
+		</div><br>	
+		We reached out to local media organizations WZND and WGLT and secured free promotions for the event. 
+		(Due to the nature of the advertizing we are unable to show those promotions here. We wish we could have recorded those advertisements and posted them to our portfolio).	
+
 		<h4>Fliers</h4>
 		<div style="text-align:center"><img src="img/flier.jpg" height="40%" width="40%"/></div><br>
-		Printable .docx files are as follows, <a href="files/1-flier.docx" style="text-decoration:underline">Full Page</a>, <a href="files/2-fliers.docx" style="text-decoration:underline">Two Half Page Fliers</a>
+		Printable .docx files are as follows, <a href="files/1-flier.docx" style="text-decoration:underline">Full Page</a>, <a href="files/2-fliers.docx" style="text-decoration:underline">Two Half Page Fliers</a> (May need to stretch images for proper printing).<br><br>
 
-		<h4>Flier Distribution</h4>
-		To support the cause we posted our fliers all around campus to get the word out. Below you can see every place we put them!<br>
+		<div style="text-align:center">
+			<img src="img/soManyFliers.JPG" height="40%" width="40%"/>
+			<img src="img/soManyFliersSide.JPG" height="40%" width="40%"/>
+		</div><br>
+
+		We printed out hundreds and hundreds of fliers to distribute!
+
+		<h4>Posting Fliers Around Campus</h4>
+		To support the cause we posted our fliers all around campus to get the word out. Below you can see every place we put them! (Pictures are linked to save on load time)<br>
 		<a href="img/IMG_3824.JPG" style="text-decoration:underline">1</a>,<a href="img/IMG_3825.JPG" style="text-decoration:underline">2</a>,<a href="img/IMG_3826.JPG" style="text-decoration:underline">3</a>,<a href="img/IMG_3827.JPG" style="text-decoration:underline">4</a>,<a href="img/IMG_3828.JPG" style="text-decoration:underline">5</a>,<a href="img/IMG_3829.JPG" style="text-decoration:underline">6</a>,<a href="img/IMG_3830.JPG" style="text-decoration:underline">7</a>,<a href="img/IMG_3831.JPG" style="text-decoration:underline">8</a>,<a href="img/IMG_3832.JPG" style="text-decoration:underline">9</a>,<a href="img/IMG_3842.JPG" style="text-decoration:underline">10</a>,<a href="img/IMG_3843.JPG" style="text-decoration:underline">11</a>,<a href="img/IMG_3844.JPG" style="text-decoration:underline">12</a>,<a href="img/IMG_3845.JPG" style="text-decoration:underline">13</a>,<a href="img/IMG_3846.JPG" style="text-decoration:underline">14</a>,<a href="img/IMG_3847.JPG" style="text-decoration:underline">15</a>,<a href="img/IMG_3848.JPG" style="text-decoration:underline">16</a>,<a href="img/IMG_3849.JPG" style="text-decoration:underline">17</a>,<a href="img/IMG_3850.JPG" style="text-decoration:underline">18</a>,<a href="img/IMG_3851.JPG" style="text-decoration:underline">19</a>,<a href="img/IMG_3852.JPG" style="text-decoration:underline">20</a>,<a href="img/IMG_3853.JPG" style="text-decoration:underline">21</a>,<a href="img/IMG_3854.JPG" style="text-decoration:underline">22</a>,<a href="img/IMG_3855.JPG" style="text-decoration:underline">23</a>,<a href="img/IMG_3856.JPG" style="text-decoration:underline">24</a>,<a href="img/IMG_3857.JPG" style="text-decoration:underline">25</a>,<a href="img/IMG_3858.JPG" style="text-decoration:underline">26</a>,<a href="img/IMG_3859.JPG" style="text-decoration:underline">27</a>,<a href="img/IMG_3860.JPG" style="text-decoration:underline">28</a>,<a href="img/IMG_3861.JPG" style="text-decoration:underline">29</a>,<a href="img/IMG_3862.JPG" style="text-decoration:underline">30</a>,<a href="img/IMG_3863.JPG" style="text-decoration:underline">31</a>,<a href="img/IMG_3864.JPG" style="text-decoration:underline">32</a>,<a href="img/IMG_3865.JPG" style="text-decoration:underline">33</a>,<a href="img/IMG_3866.JPG" style="text-decoration:underline">34</a>,<a href="img/IMG_3867.JPG" style="text-decoration:underline">35</a>,<a href="img/IMG_3868.JPG" style="text-decoration:underline">36</a>,<a href="img/IMG_3869.JPG" style="text-decoration:underline">37</a>,<a href="img/IMG_3870.JPG" style="text-decoration:underline">38</a>,<a href="img/IMG_3871.JPG" style="text-decoration:underline">39</a>,<a href="img/IMG_3872.JPG" style="text-decoration:underline">40</a>,<a href="img/IMG_3873.JPG" style="text-decoration:underline">41</a>,<a href="img/IMG_3874.JPG" style="text-decoration:underline">42</a>,<a href="img/IMG_3875.JPG" style="text-decoration:underline">43</a>,<a href="img/IMG_3876.JPG" style="text-decoration:underline">44</a>,<a href="img/IMG_3877.JPG" style="text-decoration:underline">45</a>,<a href="img/IMG_3878.JPG" style="text-decoration:underline">46</a>,<a href="img/IMG_3879.JPG" style="text-decoration:underline">47</a>,<a href="img/IMG_3880.JPG" style="text-decoration:underline">48</a>
 
 		<hr class="large">
