Uploaded the Meeting 7 minutes

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/kevin.jpeg"/>
 		<p>Kevin (Treasurer): Hello my name is Kevin and I am a sophomore at Illinois State 
 		University. I am 19 years old and was born and raised in the northwest side of Chicago in 
-		Jefferson Park. I am a Information Systems major and while minoring in Business Administration. 
+		Jefferson Park. I am a Information Systems major and minoring in Business Administration. 
 		I enjoy watching all kinds of sports and also love to play when I have the time.</p></div>
 		</td></tr>
 
