--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,7 @@
 			<a style="text-decoration:underline" href="meeting-5-minutes">Minutes</a><br>
 		Meeting 6: <a style="text-decoration:underline" href="meeting-6-agenda">Agenda</a>, 
 			<a style="text-decoration:underline" href="meeting-6-minutes">Minutes</a><br>
+		Meeting 7: <a style="text-decoration:underline" href="meeting-7-agenda">Agenda</a>,
 
 		<h3>Midterm Assessment Report</h3>
 		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).<br>
