--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
 		Have shirts finished and shipped by April 10<br>
 		Have the run April 22<br>
 
-		<h3>Agendas and Minutes (As of 3/15)</h3>
+		<h3>Agendas and Minutes (As of 3/30)</h3>
 		Meeting 1: <a style="text-decoration:underline" href="meeting-1-agenda">Agenda</a><br>
 		Meeting 2: <a style="text-decoration:underline" href="meeting-2-agenda">Agenda</a><br>
 		Meeting 3: <a style="text-decoration:underline" href="meeting-3-agenda">Agenda</a>, 
@@ -101,6 +101,8 @@
 		Meeting 6: <a style="text-decoration:underline" href="meeting-6-agenda">Agenda</a>, 
 			<a style="text-decoration:underline" href="meeting-6-minutes">Minutes</a><br>
 		Meeting 7: <a style="text-decoration:underline" href="meeting-7-agenda">Agenda</a>,
+			<a style="text-decoration:underline" href="meeting-7-minutes">Minutes</a><br>
+		Meeting 8: <a style="text-decoration:underline" href="meeting-8-agenda">Agenda</a>,
 
 		<h3>Midterm Assessment Report</h3>
 		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).<br>
@@ -116,7 +118,13 @@
 		<b>Josh [$+] - </b>Josh reached out to a local organization for youth basketball to promote the event among young athletes.<br>
 		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus.<br>
 		<h3>Volunteer Hours</h3>
-		We are awaiting the day of the race to log volunteer hours.
+		<div style="text-align:center"><img src="img/us.png" height="60%" width="60%"/></div>
+		Each of us volunteered during race day itself. We were responsible for organizing traffic for the whole event. 
+		We worked for 2 and a half hours (from 8:30 to 11:00). If we each earned $10 an hour, then in total our volunteer 
+		hours contributed $175.
+
+		<h3>Total</h3>
+		<b>$1025!</b>
 
 		<h3>Advertising</h3>
 		<h4>Radio Promotions</h4>
@@ -152,6 +160,12 @@
 		<h4>Posting Fliers Around Campus</h4>
 		To support the cause we posted our fliers all around campus to get the word out. Below you can see every place we put them! (Pictures are linked to save on load time)<br>
 		<a href="img/IMG_3824.JPG" style="text-decoration:underline">1</a>,<a href="img/IMG_3825.JPG" style="text-decoration:underline">2</a>,<a href="img/IMG_3826.JPG" style="text-decoration:underline">3</a>,<a href="img/IMG_3827.JPG" style="text-decoration:underline">4</a>,<a href="img/IMG_3828.JPG" style="text-decoration:underline">5</a>,<a href="img/IMG_3829.JPG" style="text-decoration:underline">6</a>,<a href="img/IMG_3830.JPG" style="text-decoration:underline">7</a>,<a href="img/IMG_3831.JPG" style="text-decoration:underline">8</a>,<a href="img/IMG_3832.JPG" style="text-decoration:underline">9</a>,<a href="img/IMG_3842.JPG" style="text-decoration:underline">10</a>,<br><a href="img/IMG_3843.JPG" style="text-decoration:underline">11</a>,<a href="img/IMG_3844.JPG" style="text-decoration:underline">12</a>,<a href="img/IMG_3845.JPG" style="text-decoration:underline">13</a>,<a href="img/IMG_3846.JPG" style="text-decoration:underline">14</a>,<a href="img/IMG_3847.JPG" style="text-decoration:underline">15</a>,<a href="img/IMG_3848.JPG" style="text-decoration:underline">16</a>,<a href="img/IMG_3849.JPG" style="text-decoration:underline">17</a>,<a href="img/IMG_3850.JPG" style="text-decoration:underline">18</a>,<a href="img/IMG_3851.JPG" style="text-decoration:underline">19</a>,<a href="img/IMG_3852.JPG" style="text-decoration:underline">20</a>,<br><a href="img/IMG_3853.JPG" style="text-decoration:underline">21</a>,<a href="img/IMG_3854.JPG" style="text-decoration:underline">22</a>,<a href="img/IMG_3855.JPG" style="text-decoration:underline">23</a>,<a href="img/IMG_3856.JPG" style="text-decoration:underline">24</a>,<a href="img/IMG_3857.JPG" style="text-decoration:underline">25</a>,<a href="img/IMG_3858.JPG" style="text-decoration:underline">26</a>,<a href="img/IMG_3859.JPG" style="text-decoration:underline">27</a>,<a href="img/IMG_3860.JPG" style="text-decoration:underline">28</a>,<a href="img/IMG_3861.JPG" style="text-decoration:underline">29</a>,<a href="img/IMG_3862.JPG" style="text-decoration:underline">30</a>,<br><a href="img/IMG_3863.JPG" style="text-decoration:underline">31</a>,<a href="img/IMG_3864.JPG" style="text-decoration:underline">32</a>,<a href="img/IMG_3865.JPG" style="text-decoration:underline">33</a>,<a href="img/IMG_3866.JPG" style="text-decoration:underline">34</a>,<a href="img/IMG_3867.JPG" style="text-decoration:underline">35</a>,<a href="img/IMG_3868.JPG" style="text-decoration:underline">36</a>,<a href="img/IMG_3869.JPG" style="text-decoration:underline">37</a>,<a href="img/IMG_3870.JPG" style="text-decoration:underline">38</a>,<a href="img/IMG_3871.JPG" style="text-decoration:underline">39</a>,<a href="img/IMG_3872.JPG" style="text-decoration:underline">40</a>,<br><a href="img/IMG_3873.JPG" style="text-decoration:underline">41</a>,<a href="img/IMG_3874.JPG" style="text-decoration:underline">42</a>,<a href="img/IMG_3875.JPG" style="text-decoration:underline">43</a>,<a href="img/IMG_3876.JPG" style="text-decoration:underline">44</a>,<a href="img/IMG_3877.JPG" style="text-decoration:underline">45</a>,<a href="img/IMG_3878.JPG" style="text-decoration:underline">46</a>,<a href="img/IMG_3879.JPG" style="text-decoration:underline">47</a>,<a href="img/IMG_3880.JPG" style="text-decoration:underline">48</a>
+		
+		<h3>Race Day!</h3>
+		<div style="text-align:center">
+			<video width="320" height="240" controls="controls" src="img/IMG_3965.MOV"></video>
+			<video width="320" height="240" controls="controls" src="img/IMG_3977.MOV"></video>
+		</div>
 
 		<hr class="large">
 	    </div>			
