Added additional flyer picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,6 +150,7 @@
 		<div style="text-align:center">
 			<img src="img/IMG_3884.JPG" height="40%" width="40%"/>
 			<img src="img/IMG_3885.JPG" height="40%" width="40%"/>
+			<img src="img/IMG_3911.JPG" height="40%" width="40%"/>
 		</div><br>
 		To promote the event, we handed out fliers around campus. Over the course of a few hours we handed out over 
 		400+ fliers!
