Uploaded some minutes and agendas.

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
 		Have shirts finished and shipped by April 10<br>
 		Have the run April 22<br>
 
-		<h3>Agendas and Minutes (As of 3/30)</h3>
+		<h3>Agendas and Minutes (As of 4/11)</h3>
 		Meeting 1: <a style="text-decoration:underline" href="meeting-1-agenda">Agenda</a><br>
 		Meeting 2: <a style="text-decoration:underline" href="meeting-2-agenda">Agenda</a><br>
 		Meeting 3: <a style="text-decoration:underline" href="meeting-3-agenda">Agenda</a>, 
@@ -103,6 +103,9 @@
 		Meeting 7: <a style="text-decoration:underline" href="meeting-7-agenda">Agenda</a>,
 			<a style="text-decoration:underline" href="meeting-7-minutes">Minutes</a><br>
 		Meeting 8: <a style="text-decoration:underline" href="meeting-8-agenda">Agenda</a>,
+			<a style="text-decoration:underline" href="meeting-8-minutes">Minutes</a><br>
+		Meeting 9: <a style="text-decoration:underline" href="meeting-9-agenda">Agenda</a>,
+			<a style="text-decoration:underline" href="meeting-9-minutes">Minutes</a><br>
 
 		<h3>Midterm Assessment Report</h3>
 		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).<br>
